[workspace]
resolver = "2"
members = [
    "packages/ash-core",
    "packages/ash-wasm",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/3maem/ash"
authors = ["3maem Co. <dev@3maem.com>"]
keywords = ["security", "integrity", "anti-tamper", "replay-protection", "wasm"]
categories = ["cryptography", "web-programming", "wasm"]

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
base64 = "0.21"
unicode-normalization = "0.1"
subtle = "2.5"
thiserror = "1.0"
getrandom = { version = "0.2", features = ["js"] }

# WASM dependencies
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"

# Testing
criterion = "0.5"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
