[package]
name = "ash-core"
version = "0.1.0"
edition = "2021"
description = "ASH Integrity Protocol - Core Library"
license = "Proprietary"

[lib]
name = "ash_core"
path = "src/lib.rs"

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "proof_bench"
harness = false
